// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots XY-Grid Grid cell will take up the remaining space 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gErIwn"
  >
    4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid Grid cell with self align types 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 lliDFC"
  >
    Align bottom
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 eRXDwO"
  >
    Align middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 lhbJEQ"
  >
    Align stretch
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kJvlHa"
  >
    Align top. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non harum laborum cum voluptate vel, eius adipisci similique dignissimos nobis at excepturi incidunt fugit molestiae quaerat, consequuntur porro temporibus. Nisi, ex?
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX central alignment with alignX center and alignY middle 1`] = `
<div
  className="sc-bdVaJa iEwzWw XYGridElement-sc-11ht4j5-0 bjGQ"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    I am in the center-middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    I am also centrally located
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX gutter type with margin 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 iPtIBG"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 boNXTv"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX gutter type with padding 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 iPXXsR"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 eVzabg"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal center alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dbNJcy"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    the center
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal default left alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    the left
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal justify alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 bKIBgf"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    the justify
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal right alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 cxkclV"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    the right
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal spaced alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 czsRqf"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    the spaced
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical bottom alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 gFDiLV"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    I'm at the bottom
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical middle alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fdoyQo"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    I'm in the middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical stretch alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fUdoaF"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    These cells have the same height
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical top alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 huExLd"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    I'm at the top (default)
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hLWcQQ"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 6/8/2 and 6/4/10 cells 1`] = `
<div
  className="gc-grid-y XYGridElement-sc-11ht4j5-0 kVkjUr"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gpeRkh"
  >
    6/8/2 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 dKCHBa"
  >
    6/4/10 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 12/6/4 and 12/6/8 cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jAHHvL"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 deEkAk"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with a full width cell 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ePEyAR"
  >
    full width cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 ePEyAR"
  >
    full width cell
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with two 6 small cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ecZjQA"
  >
    6 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 ecZjQA"
  >
    6 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid Multiple expanding cells will share the leftover space equally. 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gErIwn"
  >
    4 cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid Shrink means it will only take up the space its contents need 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 hjLzdu"
  >
    Shrink!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hePhNC"
  >
    Expand!
  </div>
</div>
`;

exports[`Storyshots XY-Grid To switch back to the auto behavior from a percentage or shrink behavior 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dOWcve"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    One
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    Two
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    Three
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    Four
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    Five
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fELQLj"
  >
    Six
  </div>
</div>
`;
